# rotations_analysis_in_manifold

./: CMakeLists.txt  README.md  TODOLISTS.txt
include/: .cpp_utility.hpp.swp  .exp_and_log_map.hpp.swp  .slerp.hpp.swp  .utility.hpp.swp  conversion.hpp  cpp_utility.hpp  exp_and_log_map.hpp  slerp.hpp  utility.hpp
scripts/: .conversion.py.swp  .exp_and_log_map.py.swp  .gitignore  .metrics.py.swp  .slerp.py.swp  .trash.py.swp  .utility.py.swp  .visualizer.py.swp  conversion.py  error.py  exp_and_log_map.py  jacobians.py  metrics.py  slerp.py  trash.py  utility.py  visualizer.py
src/: .main.cpp.swp  main.cpp
